# wf-butler-of-prices

./: .env.example  Cargo.toml  Makefile-lib.toml  Makefile-services.toml  Makefile.toml  deny.toml  queries.http  rustfmt.toml
.cargo/: config.toml
.github/workflows/: arm.yaml  ci-dev.yaml  ci.yaml  deploy.yaml  dev.yaml  prod.yaml
crates/wfinfo/: Cargo.toml
crates/wfinfo/src/: controllers.rs  main.rs  middleware.rs  models.rs  startup.rs
crates/wfinfo/src/controllers/: commands.rs  interactions.rs
crates/wfinfo/src/middleware/: ed25519.rs
crates/wfinfo/src/models/: config.rs  errors.rs  interactions.rs
crates/wfinfo_azure/: Cargo.toml
crates/wfinfo_azure/src/functions/: http.rs  service_bus.rs
crates/wfinfo_lib/: Cargo.toml
crates/wfinfo_lib/src/: client.rs  http.rs  lib.rs  request.rs
crates/wfinfo_lib/src/http/: routes.rs
crates/wfinfo_lib/src/models/: application.rs  channel.rs  common.rs  guild.rs  interactions.rs  macros.rs  permissions.rs  stages.rs  sticker.rs  teams.rs  user.rs
crates/wfinfo_processor/: Cargo.toml
func/: host.json
func/interactions/: function.json
lib/wfbp_azure/: Cargo.toml
lib/wfbp_azure/src/: functions.rs
lib/wfbp_azure/src/functions/: http.rs  service_bus.rs
lib/wfbp_commands/: Cargo.toml
lib/wfbp_commands/src/: builders.rs  command.rs  command_registry.rs  from_option.rs  interactions.rs  lib.rs
lib/wfbp_commands/src/interactions/: application_commands.rs  interaction_handler.rs  registry.rs  slash_command.rs  snowflake_resolver.rs
lib/wfbp_commands/src/interactions/application_commands/: handler.rs
lib/wfbp_discord/: Cargo.toml
lib/wfbp_discord/src/: client.rs  lib.rs  models.rs  rate_limit.rs  routes.rs
lib/wfbp_discord/src/middleware/: auth.rs  rate_limit.rs
lib/wfbp_discord/src/models/: application.rs  channel.rs  common.rs  emoji.rs  guild.rs  interactions.rs  macros.rs  permissions.rs  rate_limit.rs  stages.rs  sticker.rs  teams.rs  user.rs  voice.rs
lib/wfbp_http/: Cargo.toml
lib/wfbp_http/src/: error.rs  lib.rs  macros.rs  middleware.rs  rest_client.rs  routes.rs
lib/wfbp_http/src/middleware/: backoff.rs  retry.rs
lib/wfbp_logic/: Cargo.toml
lib/wfbp_logic/src/: commands.rs
lib/wfbp_logic/src/commands/: admin.rs  pc.rs
lib/wfbp_logic/src/services/: wf_item_service.rs
lib/wfbp_util/: Cargo.toml
lib/wfbp_util/src/: errors.rs  impl_partial_debug.rs  layers.rs  lib.rs  util.rs
lib/wfbp_util/src/layers/: deserialize_json.rs  ed25519.rs  http_function.rs  log_body.rs
lib/wfbp_util/src/models/: functions.rs
lib/wfbp_util/src/models/functions/: http.rs  runtime.rs  service_bus.rs
lib/wfbp_util/src/util/: body_to_bytes.rs  service_builder_ext.rs
lib/wfbp_wm/: Cargo.toml
lib/wfbp_wm/src/: client.rs  lib.rs  routes.rs
lib/wfbp_wm/src/middleware/: cache.rs
lib/wfinfo_azure/src/: functions.rs  lib.rs
lib/wfinfo_azure/src/functions/: common.rs  http.rs  service_bus.rs
lib/wfinfo_commands/: Cargo.toml
lib/wfinfo_commands/src/: builders.rs  command.rs  command_registry.rs  from_option.rs  lib.rs
lib/wfinfo_discord/: Cargo.toml  Makefile.toml
lib/wfinfo_discord/src/: client.rs  lib.rs  middleware.rs  models.rs  rate_limit.rs  routes.rs
lib/wfinfo_discord/src/middleware/: auth.rs  rate_limit.rs
lib/wfinfo_discord/src/models/: application.rs  channel.rs  common.rs  emoji.rs  guild.rs  interactions.rs  macros.rs  permissions.rs  rate_limit.rs  stages.rs  sticker.rs  teams.rs  user.rs  voice.rs
lib/wfinfo_http/: Cargo.toml
lib/wfinfo_http/src/: error.rs  lib.rs  macros.rs  middleware.rs  rest_client.rs  routes.rs
lib/wfinfo_http/src/middleware/: backoff.rs  jitter.rs  limit.rs  request.rs  retry.rs  route.rs
lib/wfinfo_lib/: Cargo.toml
lib/wfinfo_lib/src/: http.rs  lib.rs
lib/wfinfo_lib/src/http/: client.rs  macros.rs  middleware.rs  routes.rs
lib/wfinfo_lib/src/http/middleware/: backoff.rs  jitter.rs  retry.rs  to_error.rs
lib/wfinfo_logic/: Cargo.toml
lib/wfinfo_logic/src/: commands.rs  lib.rs  services.rs
lib/wfinfo_logic/src/commands/: admin.rs  pc.rs
lib/wfinfo_logic/src/services/: wf_item_service.rs
lib/wfinfo_wm/: Cargo.toml
lib/wfinfo_wm/src/: client.rs  lib.rs  middleware.rs  models.rs  routes.rs
lib/wfinfo_wm/src/middleware/: cache.rs
resources/arm/: wf-price-butler.json
resources/arm-templates/: dispatcher.json
services/: Makefile.toml
services/wfbp_dispatcher/: Cargo.toml  Makefile.toml
services/wfbp_dispatcher/func/: .funcignore
services/wfbp_dispatcher/src/: main.rs  models.rs  startup.rs
services/wfbp_dispatcher/src/controllers/: interactions.rs
services/wfbp_dispatcher/src/layers/: http_function.rs
services/wfbp_dispatcher/src/middleware/: log_body.rs
services/wfbp_dispatcher/src/models/: config.rs  errors.rs  interactions.rs
services/wfbp_dispatcher/src/routes/: interactions.rs
services/wfbp_processor/: Cargo.toml  Makefile.toml
services/wfbp_processor/func/: host.json
services/wfbp_processor/func/commands/: function.json
services/wfbp_processor/func/interactions/: function.json
services/wfbp_processor/src/: startup.rs
services/wfbp_processor/src/controllers/: commands.rs  interactions.rs
services/wfbp_processor/src/models/: config.rs  errors.rs
services/wfinfo/: Cargo.toml  Makefile.toml
services/wfinfo_dispatcher/: Cargo.toml  Makefile.toml
services/wfinfo_dispatcher/func/interactions/: function.json
services/wfinfo_dispatcher/src/: controllers.rs  main.rs  middleware.rs  models.rs  startup.rs
services/wfinfo_dispatcher/src/controllers/: interactions.rs
services/wfinfo_dispatcher/src/middleware/: ed25519.rs  log_body.rs
services/wfinfo_dispatcher/src/models/: commands.rs  config.rs  errors.rs  interactions.rs
services/wfinfo_processor/: Cargo.toml  Makefile.toml
services/wfinfo_processor/func/commands/: function.json
services/wfinfo_processor/src/: controllers.rs  main.rs  models.rs  startup.rs
services/wfinfo_processor/src/controllers/: commands.rs  interactions.rs
services/wfinfo_processor/src/models/: commands.rs  config.rs  errors.rs
