cargo-features = ["edition2021"]

[package]
name = "wfinfo_lib"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json", "multipart"]
