[package]
name = "wfbp_discord"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
wfbp_http = { path = "../wfbp_http" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = "1"
async-trait = "0.1"
derive_more = { version = "0.99", features = ["display", "error", "from"] }
http = "0.2"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tower = "0.4"
zeroize = "1"

[features]
default = []
rustls-tls = ["wfbp_http/rustls-tls"]
native-tls = ["wfbp_http/native-tls"]
