[package]
name = "wfbp_http"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
# Networking
tokio = { version = "1", features = ["time"] }
futures = "0.3"
rand = "0.8"
async-trait = "0.1"
http = "0.2"
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.11", default-features = false, features = ["gzip", "brotli", "deflate", "json", "multipart", "stream"] }

# Tracing
anyhow = "1"
tracing = "0.1"

# Other
async-recursion = "1"
derive_more = { version = "0.99", features = ["display", "error", "from"] }
dyn-clone = "1"
downcast-rs = "1"

[features]
default = []
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
