cargo-features = ["edition2021"]

[package]
name = "wfinfo_commands"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
wfinfo_lib = { path = "../wfinfo_lib" }
wfinfo_discord = { path = "../wfinfo_discord" }
tracing = "0.1"
derive_more = { version = "0.99", features = ["display", "error"] }
async-recursion = "0.3"
async-trait = "0.1"
