cargo-features = ["edition2021"]

[package]
name = "wfinfo_lib"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
rand = "0.8"
async-recursion = "0.3"
derive_more = { version = "0.99", features = ["display", "error"] }
reqwest-middleware = "0.1"
async-trait = "0.1"
truelayer-extensions = "0.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json", "multipart"]
