[package]
name = "wfinfo_logic"
version = "0.1.0"
authors = ["TehPers <tehperz@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
wfinfo_discord = { path = "../wfinfo_discord" }
wfinfo_wm = { path = "../wfinfo_wm" }
wfinfo_commands = { path = "../wfinfo_commands" }
tracing = "0.1"
async-recursion = "1"
async-trait = "0.1"
qp-trie = "0.7"
tokio = "1"
