[package]
name = "wfinfo_wm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Networking
reqwest = { version = "0.11", default-features = false, features = ["json"] }
bytes = "1"
http = "0.2"
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
wfinfo_http = { path = "../wfinfo_http" }

# Tracing
tracing = "0.1"
anyhow = "1"

# Other
async-trait = "0.1"
tokio = "1"
derive_more = { version = "0.99", features = ["display", "error"] }

[features]
default = []
rustls-tls = ["wfinfo_http/rustls-tls"]
native-tls = ["wfinfo_http/native-tls"]
