[package]
name = "wfbp_dispatcher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Web server
axum = { version = "0.5", default_features = false, features = [
    "http1",
    "http2",
    "json",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
futures = "0.3"
serde = "1"
serde_json = "1"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
# Errors
anyhow = "1"
# Configuration
envy = "0.4"
# wfbp dependencies
wfbp_azure = { path = "../../lib/wfbp_azure" }
wfbp_discord = { path = "../../lib/wfbp_discord", features = ["rustls-tls"] }
wfbp_util = { path = "../../lib/wfbp_util" }
# Signature validation
hex = "0.4"
ed25519-dalek = { version = "1", default-features = false, features = [
    "std",
    "u64_backend",
    "serde",
] }
# Util
derive_more = { version = "0.99", default_features = false, features = [
    "display",
    "error",
    "from",
    "into",
    "deref",
    "deref_mut",
] }
