cargo-features = ["edition2021"]

[package]
name = "wfinfo_dispatcher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = "1"
serde_json = "1"
envy = "0.4"
wfinfo_lib = { path = "../../lib/wfinfo_lib" }
wfinfo_azure = { path = "../../lib/wfinfo_azure" }
wfinfo_discord = { path = "../../lib/wfinfo_discord" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
hex = "0.4"

[dependencies.actix-web]
version = "4.0.0-beta.8"
default-features = false
features = ["compress-brotli", "compress-gzip", "compress-zstd", "rustls"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["display", "from", "into", "deref", "deref_mut"]

[dependencies.ed25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde", "nightly"]
