[package]
name = "wfinfo_processor"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
serde = "1"
serde_json = "1"
envy = "0.4"
wfinfo_azure = { path = "../../lib/wfinfo_azure" }
wfinfo_discord = { path = "../../lib/wfinfo_discord", features = ["rustls-tls"] }
wfinfo_commands = { path = "../../lib/wfinfo_commands" }
wfinfo_wm = { path = "../../lib/wfinfo_wm", features = ["rustls-tls"] }
wfinfo_logic = { path = "../../lib/wfinfo_logic" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures = "0.3"
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart"] }
zeroize = "1"

[dependencies.actix-web]
version = "4.0.0-rc.2"
features = ["rustls"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["display"]

[dependencies.ed25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]
